gcc/ChangeLog:

PR c++/47218
	* cgraphunit.c (assemble_thunk): Call resolve_unique_section.

gcc/testsuite/ChangeLog:

	PR c++/47218
	* g++.dg/other/pr47218-1.C: New test file.
	* g++.dg/other/pr47218.C: Likewise.
	* g++.dg/other/pr47218.h: New supporting header.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168624 138bc75d-0d04-0410-961f-82ee72b054a4